[package]
name = "iroh-discovery-cloudflare-worker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.28"
getrandom = { version = "0.2.10", features = ["js"] }
pkarr = "0.2.1"
serde = "1.0.183"
serde_json = "1.0.104"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
